--- a/src/aruhaz/View.form
+++ b/src/aruhaz/View.form
@@ -28,15 +28,15 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <Component id="tpUrlap" min="-2" pref="652" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="tpUrlap" min="-2" pref="646" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnGrafikon" alignment="0" pref="185" max="32767" attributes="0"/>
-                  <Component id="btnKilepes" alignment="1" max="32767" attributes="0"/>
-                  <Component id="btnTermekTorol" alignment="1" max="32767" attributes="0"/>
-                  <Component id="btnPdfKimutatas" alignment="1" max="32767" attributes="0"/>
-                  <Component id="btnTermekHozzaad" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnKilepes" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnPdfKimutatas" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnTermekHozzaad" max="32767" attributes="0"/>
+                  <Component id="btnTermekTorol" max="32767" attributes="0"/>
+                  <Component id="btnGrafikon" alignment="0" pref="186" max="32767" attributes="0"/>
+                  <Component id="btnArakModositas" alignment="1" pref="186" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -44,24 +44,22 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="tpUrlap" pref="0" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace pref="50" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Component id="btnTermekHozzaad" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnTermekTorol" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+              <Component id="btnArakModositas" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnGrafikon" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnPdfKimutatas" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="346" max="32767" attributes="0"/>
-              <Component id="btnKilepes" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
+              <Component id="btnKilepes" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
+          <Component id="tpUrlap" alignment="0" pref="510" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -87,8 +85,8 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Csoportos&#xed;t&#xe1;s">
-                <Property name="tabTitle" type="java.lang.String" value="Csoportos&#xed;t&#xe1;s"/>
+              <JTabbedPaneConstraints tabName="Kateg&#xf3;ria n&#xe9;zet">
+                <Property name="tabTitle" type="java.lang.String" value="Kateg&#xf3;ria n&#xe9;zet"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -103,8 +101,8 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Term&#xe9;kek">
-                <Property name="tabTitle" type="java.lang.String" value="Term&#xe9;kek"/>
+              <JTabbedPaneConstraints tabName="&#xd6;sszes term&#xe9;k">
+                <Property name="tabTitle" type="java.lang.String" value="&#xd6;sszes term&#xe9;k"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -123,7 +121,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="spTermekek" min="-2" pref="24" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="538" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="460" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -155,8 +153,8 @@
         <Container class="javax.swing.JPanel" name="pKategorizal">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Kateg&#xf3;ri&#xe1;k">
-                <Property name="tabTitle" type="java.lang.String" value="Kateg&#xf3;ri&#xe1;k"/>
+              <JTabbedPaneConstraints tabName="Kateg&#xf3;ria statisztika">
+                <Property name="tabTitle" type="java.lang.String" value="Kateg&#xf3;ria statisztika"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -165,8 +163,9 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="spKategorizal" min="-2" pref="644" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="spKategorizal" min="-2" pref="638" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -174,8 +173,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="spKategorizal" min="-2" pref="562" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="spKategorizal" min="-2" pref="470" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -201,128 +200,6 @@
             </Container>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JPanel" name="pArvaltozas">
-          <Properties>
-            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[1000, 800]"/>
-            </Property>
-            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[600, 400]"/>
-            </Property>
-            <Property name="name" type="java.lang.String" value="" noResource="true"/>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[790, 500]"/>
-            </Property>
-          </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="&#xc1;rak m&#xf3;dos&#xed;t&#xe1;sa">
-                <Property name="tabTitle" type="java.lang.String" value="&#xc1;rak m&#xf3;dos&#xed;t&#xe1;sa"/>
-              </JTabbedPaneConstraints>
-            </Constraint>
-          </Constraints>
-
-          <Layout>
-            <DimensionLayout dim="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="labelArValt" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="sliderArValt" alignment="0" min="-2" pref="570" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="labelTermekKiv" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
-                              <Component id="cbTermekek" min="-2" pref="312" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnArValtoztatas" min="-2" pref="189" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                              <Component id="labelArValtUzenet" min="-2" pref="320" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-            </DimensionLayout>
-            <DimensionLayout dim="1">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="labelTermekKiv" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="cbTermekek" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="labelArValt" min="-2" pref="26" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Component id="sliderArValt" min="-2" pref="71" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnArValtoztatas" max="32767" attributes="0"/>
-                          <Component id="labelArValtUzenet" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="321" max="32767" attributes="0"/>
-                  </Group>
-              </Group>
-            </DimensionLayout>
-          </Layout>
-          <SubComponents>
-            <Component class="javax.swing.JLabel" name="labelArValt">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Dialog" size="14" style="1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="&#xc1;r megv&#xe1;ltoztat&#xe1;sa (adott sz&#xe1;zal&#xe9;kkal)"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JSlider" name="sliderArValt">
-              <Properties>
-                <Property name="majorTickSpacing" type="int" value="5"/>
-                <Property name="maximum" type="int" value="30"/>
-                <Property name="minimum" type="int" value="-30"/>
-                <Property name="minorTickSpacing" type="int" value="5"/>
-                <Property name="paintLabels" type="boolean" value="true"/>
-                <Property name="paintTicks" type="boolean" value="true"/>
-                <Property name="snapToTicks" type="boolean" value="true"/>
-                <Property name="value" type="int" value="0"/>
-                <Property name="autoscrolls" type="boolean" value="true"/>
-                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[200, 30]"/>
-                </Property>
-                <Property name="valueIsAdjusting" type="boolean" value="true"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JComboBox" name="cbTermekek">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
-                </Property>
-              </Properties>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-              </AuxValues>
-            </Component>
-            <Component class="javax.swing.JLabel" name="labelTermekKiv">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Dialog" size="14" style="1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Term&#xe9;k kiv&#xe1;laszt&#xe1;sa"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="btnArValtoztatas">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="&#xc1;r megv&#xe1;ltoztat&#xe1;sa"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnArValtoztatasActionPerformed"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JLabel" name="labelArValtUzenet">
-            </Component>
-          </SubComponents>
-        </Container>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JButton" name="btnTermekHozzaad">
@@ -346,7 +223,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnGrafikon">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Grafikon k&#xe9;sz&#xed;t&#xe9;se..."/>
+        <Property name="text" type="java.lang.String" value="Kimutat&#xe1;s..."/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGrafikonActionPerformed"/>
@@ -366,6 +243,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKilepesActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnArakModositas">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#xc1;rak m&#xf3;dos&#xed;t&#xe1;sa..."/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnArakModositasActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
